# scattersim

./: 3_npy.npy  CMakeLists.txt  CoupledWaveStructure.h  FourierWave.h  ScatterIO.h  ScatterLayer.cpp  ScatterPlane.cpp  ScatterTest.cpp  ScatterThinVolume.cpp  ScatterView.cpp  ScatterView.py  ScatterViewLive.cpp  ScatterViewSample.cpp  ScatterVolume.cpp  cpuEvaluator.cpp  cpuEvaluator.h  cylindermaker.py  gpuEvaluator.cu  gpuEvaluator.h  iScatterPlane.py  polystyrene_all_data_standard_format.csv  readme.md  sample_generation.py  simple_texturemap.shader  spectroscopy.py  third_Cusp.h  third_Lapack.h  tilesample.py  videomaker.py
data/: RecBar.npy  RecSampleGeneration.py  RecSquare.npy  circle.npy  cylinder.npy  generate_layer_volume.py  generate_target.py  layers.npy  psf.cw  sphere.npy  triangle.npy
data/sample_scripts/: cylinders.py  image2sample.py
docs/: cw_file_format.pptx  scatterlayer.pptx
x64/: a.cw  imgui.ini
